# TestTaskRBT

./: .dockerignore  .env  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
lessons/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
lessons/migrations/: 0001_initial.py  0002_auto_20230422_1401.py  0003_auto_20230422_1824.py
people/: admin.py  models.py  serializers.py  urls.py  views.py
people/migrations/: 0001_initial.py
school/: settings.py  urls.py
school/tests/lessons/: test_lesson.py  test_study_subject.py
school/tests/people/: test_student.py  test_student_group.py  test_teacher.py
